force-app/main/default/objects/RT_Setting__c/RT_Setting__c.object-meta.xml
<CustomObject>
    <label>REV Country Setting</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REV Country Settings</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>