force-app/main/default/objects/RT_Setting__c/fields/RE_Approver_Role_1__c.field-meta.xml
<CustomField>
    <fullName>RE_Approver_Role_1__c</fullName>
    <label>Approver Role 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>