force-app/main/default/objects/RT_Setting__c/fields/RE_CND_BrandFee_Category__c.field-meta.xml
<CustomField>
    <fullName>RE_CND_BrandFee_Category__c</fullName>
    <label>BrandFee Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Gasoline (High)</fullName>
            </value>
            <value>
                <fullName>Gasoline (Low)</fullName>
            </value>
            <value>
                <fullName>Gasoline (Mid)</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
            <value>
                <fullName>SDX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>