force-app/main/default/objects/RT_Setting__c/fields/RE_Delegate_Approver__c.field-meta.xml
<CustomField>
    <fullName>RE_Delegate_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delegate Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REV_Country_Settings1</relationshipName>
    <type>Lookup</type>
</CustomField>