force-app/main/default/objects/RT_Setting__c/fields/RE_Location__c.field-meta.xml
<CustomField>
    <fullName>RE_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>REV Country Settings</relationshipLabel>
    <relationshipName>REV_Country_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>