force-app/main/default/objects/RT_Setting__c/fields/RE_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Location_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Name</label>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipLabel>REV Country Settings (Location Name)</relationshipLabel>
    <relationshipName>REV_Country_Settings_CND_CS_Location</relationshipName>
    <type>Lookup</type>
</CustomField>