force-app/main/default/objects/RT_Setting__c/fields/RE_Max_Margin__c.field-meta.xml
<CustomField>
    <fullName>RE_Max_Margin__c</fullName>
    <label>Max Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>