force-app/main/default/objects/RT_Setting__c/fields/RE_Output_Pricing_Condition__c.field-meta.xml
<CustomField>
    <fullName>RE_Output_Pricing_Condition__c</fullName>
    <label>Output Pricing Condition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YD07</fullName>
            </value>
            <value>
                <fullName>YD04</fullName>
            </value>
            <value>
                <fullName>YD03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>