force-app/main/default/objects/RT_Setting__c/fields/RE_Rate_Unit__c.field-meta.xml
<CustomField>
    <fullName>RE_Rate_Unit__c</fullName>
    <label>Rate Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RE_Rate_Unit_Set</valueSetName>
    </valueSet>
</CustomField>