force-app/main/default/objects/RT_Setting__c/fields/RE_Relevant_Product__c.field-meta.xml
<CustomField>
    <fullName>RE_Relevant_Product__c</fullName>
    <description>used in the List price calculation Malaysia customer Opps</description>
    <label>Relevant Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>