force-app/main/default/objects/RT_Setting__c/fields/RE_User_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_User_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>REV_Country_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>