force-app/main/default/objects/RT_Setting__c/fields/RE_Validity__c.field-meta.xml
<CustomField>
    <fullName>RE_Validity__c</fullName>
    <label>Validity</label>
    <length>1</length>
    <type>Text</type>
</CustomField>