force-app/main/default/objects/RT_Setting__c/fields/RT_Account__c.field-meta.xml
<CustomField>
    <fullName>RT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Mappings</relationshipLabel>
    <relationshipName>Turkey_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>