force-app/main/default/objects/RT_Setting__c/fields/RT_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Account_Number__c</fullName>
    <formula>RT_Account__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>