force-app/main/default/objects/RT_Setting__c/fields/RT_Parent_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>RT_Parent_Account_Number__c</fullName>
    <formula>IF(  ISPICKVAL( RT_Account__r.Customer_Type__c, &apos;Ship To&apos;), RT_Account__r.Parent.AccountNumber ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Account Number</label>
    <type>Text</type>
</CustomField>