force-app/main/default/objects/RT_Setting__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RE_Location__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Turkey</value>
        </filterItems>
        <filterItems>
            <field>RE_Location__c.RT_Location_Type__c</field>
            <operation>equals</operation>
            <value>Retail Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RE_Location__c</referenceTo>
    <relationshipName>Country_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>