force-app/main/default/objects/RT_Setting__c/recordTypes/MY_Code_Value_Mapping.recordType-meta.xml
<RecordType>
    <fullName>MY_Code_Value_Mapping</fullName>
    <active>true</active>
    <label>MY Code Value Mapping</label>
</RecordType>