force-app/main/default/objects/RT_Setting__c/recordTypes/PH_Code_Value_Mapping.recordType-meta.xml
<RecordType>
    <fullName>PH_Code_Value_Mapping</fullName>
    <active>true</active>
    <label>PH Code Value Mapping</label>
</RecordType>