force-app/main/default/objects/RT_Setting__c/recordTypes/RE_Approval_Process.recordType-meta.xml
<RecordType>
    <fullName>RE_Approval_Process</fullName>
    <active>true</active>
    <description>RE Approval Process</description>
    <label>RE Approval Process</label>
</RecordType>