force-app/main/default/objects/RT_Setting__c/recordTypes/RE_User_leave_plan.recordType-meta.xml
<RecordType>
    <fullName>RE_User_leave_plan</fullName>
    <active>true</active>
    <label>User leave plan</label>
</RecordType>