force-app/main/default/objects/RT_Setting__c/recordTypes/RT_Account_ROC_Mapping.recordType-meta.xml
<RecordType>
    <fullName>RT_Account_ROC_Mapping</fullName>
    <active>true</active>
    <label>Turkey Account ROC Mapping</label>
</RecordType>