force-app/main/default/objects/RT_Setting__c/validationRules/Customer_Site_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Site_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName == &apos;RT_Account_ROC_Mapping&apos;
&amp;&amp; ( ISBLANK( Site_Name__c ) ||  ISBLANK( RT_Account__c )  )</errorConditionFormula>
    <errorMessage>Account and Site are required</errorMessage>
</ValidationRule>