force-app/main/default/objects/RT_Setting__c/validationRules/RE_Custom_Opps_leave_plan.validationRule-meta.xml
<ValidationRule>
    <fullName>RE_Custom_Opps_leave_plan</fullName>
    <active>true</active>
    <errorConditionFormula>IF( RecordType.Name = &apos;User leave plan&apos;, ISPICKVAL( RE_User_Name__r.RE_Customer_Opps_team__c  ,&quot;&quot;)
,
false)</errorConditionFormula>
    <errorMessage>User Name should have Access to CO dashboard</errorMessage>
</ValidationRule>