force-app/main/default/objects/RT_Setting__c/listViews/Payment_Terms.listView-meta.xml
<ListView>
    <fullName>Payment_Terms</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.RT_Code_Value_mapping</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>TU</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Payment Term</value>
    </filters>
    <label>Turkey Payment Terms</label>
    <sharedTo>
        <territoryAndSubordinates>Revolution_Territory.Turkey</territoryAndSubordinates>
    </sharedTo>
</ListView>