force-app/main/default/objects/RT_Setting__c/listViews/PH_Approval_process_SOM.listView-meta.xml
<ListView>
    <fullName>PH_Approval_process_SOM</fullName>
    <columns>NAME</columns>
    <columns>RE_Approver_Role_1__c</columns>
    <columns>RE_User_Name__c</columns>
    <columns>Active__c</columns>
    <columns>RE_Approver_Role_2__c</columns>
    <columns>RE_Delegate_Approver__c</columns>
    <columns>RE_Min_Margin__c</columns>
    <columns>RE_Max_Margin__c</columns>
    <columns>RE_Approval_Status__c</columns>
    <columns>Value__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Country__c</columns>
    <columns>RE_Country__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.RE_Approval_Process</value>
    </filters>
    <filters>
        <field>Country__c</field>
        <operation>equals</operation>
        <value>PH</value>
    </filters>
    <label>PH Approval process (SOM)</label>
</ListView>