force-app/main/default/objects/RT_Setting__c/listViews/RE_MY_Intraday_Pricing.listView-meta.xml
<ListView>
    <fullName>RE_MY_Intraday_Pricing</fullName>
    <columns>NAME</columns>
    <columns>RE_Product__c</columns>
    <columns>RE_Location__c</columns>
    <columns>RE_Relevant_Product__c</columns>
    <columns>Value__c</columns>
    <columns>RE_Sales_Org__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RT_Setting__c.RE_Intraday_Pricing</value>
    </filters>
    <label>RE MY Intraday Pricing</label>
    <sharedTo>
        <territory>Revolution_Territory.Malaysia</territory>
    </sharedTo>
</ListView>